# STM32F4DISCOVERY-in-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
