[package]
name = "stm32-rust"
version = "0.1.0"
authors = ["shitaro <apprentice.physicist.shitaro@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.stm32f4]
version = "0.11.0"
features = ["stm32f407", "rt"]

[[bin]]
name = "stm32-rust"
test = false
bench = false

[profile.release]
codegen-uints = 1
debug = true
lto = true